--- a/.github/workflows/linux-trt_rtx.yml
+++ b/.github/workflows/linux-trt_rtx.yml
@@ -1,4 +1,4 @@
-name: Build ORT (Modular)
+name: Build ORT (Linux Static/Shared)
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # 核心：使用 Ubuntu 20.04 容器确保 glibc 兼容性
+    # 保持使用 Ubuntu 20.04 容器，为了 glibc 兼容性
     container:
       image: ubuntu:20.04
 
@@ -23,33 +23,50 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # 1. 安装基础依赖 (因为容器是空的)
+      # 1. 基础环境安装
       - name: Install Base Dependencies
         run: |
           apt-get update
-          apt-get install -y wget curl git build-essential ca-certificates tar unzip zip jq sudo ninja
-          # Jimver Action 有时依赖 sudo，容器默认 root 其实不需要，但为了兼容性装上
-          
-      # 2. 初始化 CUDA (使用社区 Action)
-      # 只要版本号是规范的 (12.9.0 等)，该 Action 能自动下载并缓存
-      # 注意：如果 12.9/13.1 太新不在它的已知列表里，它会尝试从 Nvidia 官网下载 runfile
+          apt-get install -y wget curl git build-essential ca-certificates tar unzip zip jq sudo libarchive-tools ninja
+          # libarchive-tools 包含 bsdtar 等工具，有时解压需要
+
+      # 2. 获取 ORT 最新 Release Tag (修正点 1)
+      - name: Get Latest ORT Tag
+        id: get_tag
+        run: |
+          # 调用 GitHub API 获取最新 Release 的 tag_name
+          LATEST_TAG=$(curl -sL https://api.github.com/repos/microsoft/onnxruntime/releases/latest | jq -r ".tag_name")
+          echo "Latest tag detected: $LATEST_TAG"
+          echo "tag=$LATEST_TAG" >> $GITHUB_OUTPUT
+
+      # 3. Checkout ORT 代码 (使用最新 Tag)
+      - name: Checkout ONNX Runtime
+        uses: actions/checkout@v4
+        with:
+          repository: microsoft/onnxruntime
+          path: onnxruntime
+          ref: ${{ steps.get_tag.outputs.tag }} # 使用刚才获取的 Tag
+          submodules: recursive
+
+      # 4. 初始化 CUDA (使用 Jimver Action 自动缓存)
       - name: Setup CUDA
         uses: Jimver/cuda-toolkit@v0.2.30
         id: cuda-toolkit
         with:
           cuda: ${{ matrix.cuda_ver }}.0
-          method: 'network' # 推荐 network，如果太慢或版本找不到可尝试 'local'
-        #   sub-packages: '["nvcc", "cudart", "visual_studio_integration"]' 
-          # 注意：visual_studio_integration 往往对 CMake 查找 CUDA 很有帮助，虽然这是 Linux
-          
-      # 3. 初始化 TensorRT-RTX (使用我们刚才写的本地 Action)
+          method: 'network'
+          # 安装 nvcc 和编译必要的库
+        #   sub-packages: '["nvcc", "cudart", "visual_studio_integration"]'
+
+      # 5. 初始化 TensorRT-RTX (使用我们定义的本地 Action)
+      # 请确保 .github/actions/setup-trt-rtx/action.yml 文件存在 (见上一条回复)
       - name: Setup TensorRT-RTX
         uses: ./.github/actions/setup-trt-rtx
         with:
           cuda-version: ${{ matrix.cuda_ver }}
-          trt-version: '1.3.0.35' # 默认就是这个，也可以不写
+          # 如果你要针对 12.9 使用特定版本 TRT，可以在这里控制 inputs
 
-      # 4. 安装 Python (Wheel 构建需要)
+      # 6. 安装 Python (用于编译 Wheel)
       - name: Install Python ${{ matrix.python_ver }}
         run: |
           apt-get install -y software-properties-common
@@ -58,21 +75,21 @@ jobs:
           apt-get install -y python${{ matrix.python_ver }} python${{ matrix.python_ver }}-dev python${{ matrix.python_ver }}-distutils
           curl -sS https://bootstrap.pypa.io/get-pip.py | python${{ matrix.python_ver }}
 
-      # 5. 安装新版 CMake (Ubuntu 20.04 自带的太老)
+      # 7. 安装 CMake (Ubuntu 20.04 自带太老)
       - name: Install CMake
         uses: jwlawson/actions-setup-cmake@v2.0
         with:
           cmake-version: '3.29.0'
 
-      # 6. 构建
+      # 8. 执行构建
       - name: Build ORT
         working-directory: ${{ github.workspace }}
         run: |
-          chmod +x build.sh
-          ./build.sh
+          chmod +x build-onnxruntime-linux-trt_rtx.sh
+          ./build-onnxruntime-linux-trt_rtx.sh
         env:
           ORT_PATH: onnxruntime
-          # TRT_RTX_HOME 已经在上面的 Action 中被自动注入到 ENV 了
+          # TRT_RTX_HOME 由 setup-trt-rtx Action 注入
           CUDA_VERSION: ${{ matrix.cuda_ver }}
           PYTHON_EXEC: python${{ matrix.python_ver }}
 
