fix python setup

--- a/.github/workflows/linux-trt_rtx.yml
+++ b/.github/workflows/linux-trt_rtx.yml
@@ -67,11 +67,39 @@ jobs:
           # 如果你要针对 12.9 使用特定版本 TRT，可以在这里控制 inputs
 
       # 6. 安装 Python (用于编译 Wheel)
-      - name: Setup Python 
-        uses: actions/setup-python@v5
-        with:
-            python-version: ${{ matrix.python_ver }}
-            # cache: 'pip'
+      - name: Install Python ${{ matrix.python_ver }}
+        run: |
+          # 1. 再次确保 update，防止之前的缓存过期
+          apt-get update -y
+          
+          # 2. 安装 PPA 管理工具 (如果 Base Dependencies 没装全的话)
+          apt-get install -y software-properties-common gpg-agent curl
+          
+          # 3. 添加 Deadsnakes PPA (专门提供各版本 Python)
+          add-apt-repository -y ppa:deadsnakes/ppa
+          
+          # 4. [关键] 必须再次 Update 才能看到新 repo 里的包！
+          apt-get update -y
+          
+          # 5. 安装 Python 及其开发头文件 (注意: deadsnakes 不包含 pip)
+          # python3.11-distutils 在新版中通常包含在核心或 venv 中，或者是 python3-distutils
+          # 这里安装 venv 和 dev 通常就够了
+          apt-get install -y \
+            python${{ matrix.python_ver }} \
+            python${{ matrix.python_ver }}-dev \
+            python${{ matrix.python_ver }}-venv \
+            python${{ matrix.python_ver }}-distutils || echo "distutils included or not found"
+          
+          # 6. [关键] 手动安装 pip (这是最稳的方法，避开 apt 的旧版 pip)
+          curl -sS https://bootstrap.pypa.io/get-pip.py | python${{ matrix.python_ver }}
+          
+          # 7. 建立软链接 (可选，方便直接敲 python)
+          update-alternatives --install /usr/bin/python3 python3 /usr/bin/python${{ matrix.python_ver }} 1
+          update-alternatives --install /usr/bin/python python /usr/bin/python${{ matrix.python_ver }} 1
+          
+          # 8. 验证
+          python --version
+          pip --version
 
       # 7. 安装 CMake (Ubuntu 20.04 自带太老)
       - name: Install CMake
