--- a/.github/workflows/linux-trt_rtx.yml
+++ b/.github/workflows/linux-trt_rtx.yml
@@ -30,20 +30,33 @@ jobs:
           apt-get install -y wget curl git build-essential ca-certificates tar unzip zip jq sudo libarchive-tools ninja-build lsb-release gnupg software-properties-common pkg-config zlib1g-dev libssl-dev libffi-dev openssl
           # libarchive-tools 包含 bsdtar 等工具，有时解压需要
 
-      - name: Install GCC 11
+      # - name: Install GCC 11
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y software-properties-common
+      #     sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+      #     sudo apt-get update
+      #     sudo apt-get install -y gcc-11 g++-11 binutils
+          
+      #     # 将 gcc-11 设为默认 gcc
+      #     sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 100 --slave /usr/bin/g++ g++ /usr/bin/g++-11
+          
+      #     # 验证版本
+      #     gcc --version
+          
+      - name: Install Clang 12
         run: |
           sudo apt-get update
-          sudo apt-get install -y software-properties-common
-          sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-          sudo apt-get update
-          sudo apt-get install -y gcc-11 g++-11 binutils
+          # Ubuntu 20.04 官方源里就有 clang-12
+          sudo apt-get install -y clang-12
           
-          # 将 gcc-11 设为默认 gcc
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 100 --slave /usr/bin/g++ g++ /usr/bin/g++-11
+          # 建立软链接，让 clang/clang++ 命令指向版本 12
+          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-12 100
+          sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-12 100
           
-          # 验证版本
-          gcc --version
-          ld --version
+          # 验证
+          clang --version
+          
 
       # 6. 安装 Python (用于编译 Wheel)
       - name: Install uv
@@ -104,6 +117,8 @@ jobs:
           chmod +x build-onnxruntime-linux-trt_rtx.sh
           ./build-onnxruntime-linux-trt_rtx.sh
         env:
+          CC: clang
+          CXX: clang++
           ORT_PATH: onnxruntime
           # TRT_RTX_HOME 由 setup-trt-rtx Action 注入
           CUDA_VERSION: ${{ matrix.cuda_ver }}
