--- a/.github/workflows/linux-trt_rtx.yml
+++ b/.github/workflows/linux-trt_rtx.yml
@@ -94,6 +94,11 @@ jobs:
           path: onnxruntime
           ref: ${{ steps.get_tag.outputs.tag }} # 使用刚才获取的 Tag
           submodules: recursive
+          
+      - name: Patch ORT for Clang 20
+        working-directory: ${{ github.workspace }}/onnxruntime
+        run: patch -p1 < ../patches/spin_pause_clang20.patch
+
 
       # 5. 初始化 TensorRT-RTX (使用我们定义的本地 Action)
       - name: Setup TensorRT-RTX
