fix build cmd --compile_no_warning_as_error

--- a/.github/workflows/linux-trt_rtx.yml
+++ b/.github/workflows/linux-trt_rtx.yml
@@ -100,6 +100,8 @@ jobs:
         run: |
           ls -la
           ls .. -la
+          ls ../patches/ -la
+          ls ../patches/spin_pause_clang20.patch -la
           pwd
           patch -p1 < ../patches/spin_pause_clang20.patch
 
